--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </section>
     <section id="contact">
         <h2>Contact Information</h2>
-        <p><strong>Owner:</strong> John Doe</p>
+        <p><strong>Owner:</strong> John Smith</p>
         <p><strong>Manager:</strong> Jane Smith</p>
         <p><strong>Store Address:</strong> 123 Snack Street, Food City, FC 12345</p>
         <p><strong>Contact Number:</strong> (123) 456-7890</p>
